Add TradingView widget for cryptocurrency tickers

--- a/index.html
+++ b/index.html
@@ -9,9 +9,35 @@
 <body>
   <header class="topbar">
     <div class="container">
-      <div class="quotes" aria-live="polite">
-        <div id="quotesTrack" class="quotes-track"></div>
+      <!-- TradingView Widget BEGIN -->
+      <div class="tradingview-widget-container" style="width:100%">
+        <div class="tradingview-widget-container__widget"></div>
+        <div class="tradingview-widget-copyright">
+          <a href="https://br.tradingview.com/markets/" rel="noopener nofollow" target="_blank">
+        </div>
+        <script type="text/javascript" src="https://s3.tradingview.com/external-embedding/embed-widget-tickers.js" async>
+        {
+          "symbols": [
+            {"proName": "BITSTAMP:BTCUSD", "title": "Bitcoin"},
+            {"proName": "BITSTAMP:ETHUSD", "title": "Ethereum"},
+            {"proName": "TRADENATION:SOLANA", "title": ""},
+            {"proName": "CRYPTOCAP:BNB", "title": ""},
+            {"proName": "CRYPTOCAP:XRP", "title": ""},
+            {"proName": "CRYPTOCAP:DOGE", "title": ""},
+            {"proName": "CRYPTOCAP:SHIB", "title": ""},
+            {"proName": "CRYPTOCAP:ADA", "title": ""},
+            {"proName": "CRYPTOCAP:AVAX", "title": ""},
+            {"proName": "CRYPTOCAP:UNI", "title": ""}
+          ],
+          "colorTheme": "dark",
+          "locale": "br",
+          "largeChartUrl": "",
+          "isTransparent": false,
+          "showSymbolLogo": true
+        }
+        </script>
       </div>
+      <!-- TradingView Widget END -->
     </div>
   </header>
 
