--- a/index.html
+++ b/index.html
@@ -9,34 +9,8 @@
 <body>
   <header class="topbar">
     <div class="container">
-      <div class="tradingview-widget-container" style="width:100%">
-        <div class="tradingview-widget-container__widget"></div>
-        <div class="tradingview-widget-copyright">
-          <a href="https://br.tradingview.com/markets/" rel="noopener nofollow" target="_blank">
-        </div>
-        <script type="text/javascript" src="https://s3.tradingview.com/external-embedding/embed-widget-tickers.js" async>
-        {
-          "symbols": [
-            {"proName": "BITSTAMP:BTCUSD", "title": "Bitcoin"},
-            {"proName": "BITSTAMP:ETHUSD", "title": "Ethereum"},
-            {"proName": "TRADENATION:SOLANA", "title": ""},
-            {"proName": "CRYPTOCAP:BNB", "title": ""},
-            {"proName": "CRYPTOCAP:XRP", "title": ""},
-            {"proName": "CRYPTOCAP:DOGE", "title": ""},
-            {"proName": "CRYPTOCAP:SHIB", "title": ""},
-            {"proName": "CRYPTOCAP:ADA", "title": ""},
-            {"proName": "CRYPTOCAP:AVAX", "title": ""},
-            {"proName": "CRYPTOCAP:UNI", "title": ""}
-          ],
-          "colorTheme": "dark",
-          "locale": "br",
-          "largeChartUrl": "",
-          "isTransparent": false,
-          "showSymbolLogo": true
-        }
-        </script>
-      </div>
-      </div>
+      <!-- Header sem widget TradingView -->
+    </div>
   </header>
 
   <main class="container">
